Expand the root filesystem on first boot
Expand the root partition on first boot (fdisk) and the root filesystem on
second (resize2fs) using two init scripts so we can use the full size of the
SD card.

--- a/configs/odroidxu4_defconfig
+++ b/configs/odroidxu4_defconfig
@@ -19,6 +19,9 @@ BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="4.14.16-104"
 BR2_LINUX_KERNEL_DEFCONFIG="odroidxu4"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="exynos5422-odroidxu4"
+BR2_PACKAGE_E2FSPROGS=y
+# BR2_PACKAGE_E2FSPROGS_FSCK is not set
+BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
