Setup a LAMP server
- Install and configure the MariaDB SQL database
- Install and configure the Apache HTTP server with PHP support
- Configure the services to log into syslog

--- a/configs/odroidxu4_defconfig
+++ b/configs/odroidxu4_defconfig
@@ -2,15 +2,18 @@ BR2_arm=y
 BR2_cortex_a7=y
 BR2_CCACHE=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_14=y
-BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
+BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="cloudbox"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Cloudbox"
+BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt $(BR2_EXTERNAL_CLOUDBOX_PATH)/board/odroidxu4s/device_table.txt"
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
 # BR2_TARGET_GENERIC_GETTY is not set
 BR2_SYSTEM_DHCP="eth0"
-BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_CLOUDBOX_PATH)/board/odroidxu4s/user-tables.txt"
+BR2_GENERATE_LOCALE="en_US.utf8"
+BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_CLOUDBOX_PATH)/board/odroidxu4s/user_table.txt"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_CLOUDBOX_PATH)/board/odroidxu4s/rootfs-overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_CLOUDBOX_PATH)/board/odroidxu4s/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/hardkernel/odroidxu4/post-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
@@ -22,6 +25,16 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="exynos5422-odroidxu4"
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
+BR2_PACKAGE_PHP=y
+BR2_PACKAGE_PHP_SAPI_FPM=y
+BR2_PACKAGE_PHP_EXT_OPCACHE=y
+BR2_PACKAGE_PHP_EXT_PDO=y
+BR2_PACKAGE_PHP_EXT_PDO_MYSQL=y
+BR2_PACKAGE_MYSQL=y
+BR2_PACKAGE_MARIADB=y
+BR2_PACKAGE_MARIADB_SERVER=y
+BR2_PACKAGE_APACHE=y
+BR2_PACKAGE_APACHE_MPM_EVENT=y
 BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
@@ -30,6 +43,7 @@ BR2_PACKAGE_SUDO=y
 BR2_PACKAGE_HTOP=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
+BR2_TARGET_ROOTFS_EXT2_SIZE="200M"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
