--- a/board/odroidxu4s/rootfs-overlay/etc/php-fpm.conf
+++ b/board/odroidxu4s/rootfs-overlay/etc/php-fpm.conf
@@ -52,3 +52,7 @@ listen.group = app
 user = app
 group = app
 
+; The timeout for serving a single request after which the worker process will
+; be killed.
+request_terminate_timeout = 360
+
