--- a/board/odroidxu4s/rootfs-overlay/etc/php.ini
+++ b/board/odroidxu4s/rootfs-overlay/etc/php.ini
@@ -386,7 +386,7 @@ apc.enabled 1
 ; Maximum execution time of each script, in seconds
 ; http://php.net/max-execution-time
 ; Note: This directive is hardcoded to 0 for the CLI SAPI
-max_execution_time = 180
+max_execution_time = 360
 
 ; Maximum amount of time each script may spend parsing request data. It's a good
 ; idea to limit this time on productions servers in order to eliminate unexpectedly
@@ -932,6 +932,7 @@ default_socket_timeout = 60
 ;extension=xsl
 
 zend_extension=opcache
+extension=imagick
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
