--- a/configs/odroidxu4_defconfig
+++ b/configs/odroidxu4_defconfig
@@ -6,7 +6,6 @@ BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="cloudbox"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Cloudbox"
-BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt $(BR2_EXTERNAL_CLOUDBOX_PATH)/board/odroidxu4s/device_table.txt"
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
 # BR2_TARGET_GENERIC_GETTY is not set
 BR2_SYSTEM_DHCP="eth0"
@@ -22,28 +21,55 @@ BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="4.14.16-104"
 BR2_LINUX_KERNEL_DEFCONFIG="odroidxu4"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="exynos5422-odroidxu4"
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_PHP=y
+BR2_PACKAGE_PHP_SAPI_CLI=y
 BR2_PACKAGE_PHP_SAPI_FPM=y
+BR2_PACKAGE_PHP_EXT_FILEINFO=y
 BR2_PACKAGE_PHP_EXT_OPCACHE=y
+BR2_PACKAGE_PHP_EXT_BZIP2=y
+BR2_PACKAGE_PHP_EXT_ZIP=y
+BR2_PACKAGE_PHP_EXT_OPENSSL=y
 BR2_PACKAGE_PHP_EXT_PDO=y
 BR2_PACKAGE_PHP_EXT_PDO_MYSQL=y
+BR2_PACKAGE_PHP_EXT_ICONV=y
+BR2_PACKAGE_PHP_EXT_INTL=y
+BR2_PACKAGE_PHP_EXT_MBSTRING=y
+BR2_PACKAGE_PHP_EXT_EXIF=y
+BR2_PACKAGE_PHP_EXT_GD=y
+BR2_PACKAGE_PHP_EXT_JSON=y
+BR2_PACKAGE_PHP_EXT_CURL=y
+BR2_PACKAGE_PHP_EXT_PCNTL=y
+BR2_PACKAGE_PHP_EXT_CTYPE=y
+BR2_PACKAGE_PHP_EXT_FILTER=y
+BR2_PACKAGE_PHP_EXT_DOM=y
+BR2_PACKAGE_PHP_EXT_SIMPLEXML=y
+BR2_PACKAGE_PHP_EXT_XML=y
+BR2_PACKAGE_PHP_EXT_XMLREADER=y
+BR2_PACKAGE_PHP_EXT_XMLWRITER=y
+BR2_PACKAGE_PHP_IMAGICK=y
 BR2_PACKAGE_MYSQL=y
 BR2_PACKAGE_MARIADB=y
 BR2_PACKAGE_MARIADB_SERVER=y
+BR2_PACKAGE_PCRE_16=y
+BR2_PACKAGE_PCRE_32=y
+BR2_PACKAGE_PCRE_UCP=y
 BR2_PACKAGE_APACHE=y
 BR2_PACKAGE_APACHE_MPM_EVENT=y
 BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
+BR2_PACKAGE_NTP=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_SUDO=y
+BR2_PACKAGE_COREUTILS=y
 BR2_PACKAGE_HTOP=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="200M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="460M"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
@@ -58,3 +84,4 @@ BR2_TARGET_UBOOT_SPL_NAME="sd_fuse/bl1.bin.hardkernel sd_fuse/bl2.bin.hardkernel
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
+BR2_PACKAGE_NEXTCLOUD=y
