Setting up redis as memory cache
Set up redis as memory cache and file locking system. Also add instruction to
complete the installation into a README file.

--- a/board/odroidxu4s/rootfs-overlay/etc/php.ini
+++ b/board/odroidxu4s/rootfs-overlay/etc/php.ini
@@ -933,6 +933,7 @@ default_socket_timeout = 60
 
 zend_extension=opcache
 extension=imagick
+extension=redis
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
