--- a/configs/odroidxu4_defconfig
+++ b/configs/odroidxu4_defconfig
@@ -54,6 +54,7 @@ BR2_PACKAGE_PHP_IMAGICK=y
 BR2_PACKAGE_MYSQL=y
 BR2_PACKAGE_MARIADB=y
 BR2_PACKAGE_MARIADB_SERVER=y
+BR2_PACKAGE_REDIS=y
 BR2_PACKAGE_PCRE_16=y
 BR2_PACKAGE_PCRE_32=y
 BR2_PACKAGE_PCRE_UCP=y
@@ -85,3 +86,4 @@ BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_NEXTCLOUD=y
+BR2_PACKAGE_PHP_REDIS=y
