--- a/configs/odroidxu4_defconfig
+++ b/configs/odroidxu4_defconfig
@@ -51,6 +51,8 @@ BR2_PACKAGE_PHP_EXT_XML=y
 BR2_PACKAGE_PHP_EXT_XMLREADER=y
 BR2_PACKAGE_PHP_EXT_XMLWRITER=y
 BR2_PACKAGE_PHP_IMAGICK=y
+BR2_PACKAGE_LIBOPENSSL_BIN=y
+BR2_PACKAGE_LIBOPENSSL_ENGINES=y
 BR2_PACKAGE_MYSQL=y
 BR2_PACKAGE_MARIADB=y
 BR2_PACKAGE_MARIADB_SERVER=y
