--- a/board/odroidxu4s/rootfs-overlay/etc/apache2/extra/httpd-vhosts.conf
+++ b/board/odroidxu4s/rootfs-overlay/etc/apache2/extra/httpd-vhosts.conf
@@ -14,13 +14,30 @@
 # You may use the command line option '-S' to verify your virtual host
 # configuration.
 
-#
-# VirtualHost example:
-# Almost any Apache directive may go into a VirtualHost container.
-# The first VirtualHost section is used for all requests that do not
-# match a ServerName or ServerAlias in any <VirtualHost> block.
-#
 <VirtualHost *:80>
-    DocumentRoot "/var/www/app"
+	RewriteEngine On
+	RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
 </VirtualHost>
 
+<VirtualHost *:443>
+	DocumentRoot "/var/www/app"
+
+	# Enable/Disable SSL for this virtual host
+	SSLEngine on
+
+	# SSL Certificates
+	SSLCertificateFile "/etc/apache2/server.crt"
+	SSLCertificateKeyFile "/etc/apache2/server.key"
+
+	<FilesMatch "\.(cgi|shtml|phtml|php)$">
+		SSLOptions +StdEnvVars
+	</FilesMatch>
+	<Directory "/usr/cgi-bin">
+		SSLOptions +StdEnvVars
+	</Directory>
+
+	# Enable HTTP Strict Transport Security
+	<IfModule mod_headers.c>
+		Header always set Strict-Transport-Security "max-age=15552000"
+	</IfModule>
+</VirtualHost>
