--- a/board/odroidxu4s/rootfs-overlay/etc/apache2/httpd.conf
+++ b/board/odroidxu4s/rootfs-overlay/etc/apache2/httpd.conf
@@ -54,6 +54,7 @@ Mutex default:/var/log
 #
 #Listen 12.34.56.78:80
 Listen 80
+Listen 443
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -143,7 +144,7 @@ LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 #LoadModule session_dbd_module modules/mod_session_dbd.so
 #LoadModule slotmem_shm_module modules/mod_slotmem_shm.so
 #LoadModule slotmem_plain_module modules/mod_slotmem_plain.so
-#LoadModule ssl_module modules/mod_ssl.so
+LoadModule ssl_module modules/mod_ssl.so
 #LoadModule dialup_module modules/mod_dialup.so
 #LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
 #LoadModule lbmethod_bytraffic_module modules/mod_lbmethod_bytraffic.so
@@ -484,7 +485,7 @@ Include /etc/apache2/extra/httpd-mpm.conf
 # Real-time info on requests and configuration
 #Include /etc/apache2/extra/httpd-info.conf
 
-# Virtual hosts
+# Virtual hosts and SSL
 Include /etc/apache2/extra/httpd-vhosts.conf
 
 # Local access to the Apache HTTP Server Manual
