Add support for HTTP2
    - install the nghttp2 libraries
    - enable support for HTTP2 in apache

--- a/board/odroidxu4s/rootfs-overlay/etc/apache2/extra/httpd-vhosts.conf
+++ b/board/odroidxu4s/rootfs-overlay/etc/apache2/extra/httpd-vhosts.conf
@@ -20,6 +20,7 @@
 </VirtualHost>
 
 <VirtualHost *:443>
+	Protocols h2 http/1.1
 	DocumentRoot "/var/www/app"
 
 	# Enable/Disable SSL for this virtual host
