--- a/configs/odroidxu4_defconfig
+++ b/configs/odroidxu4_defconfig
@@ -57,6 +57,7 @@ BR2_PACKAGE_MYSQL=y
 BR2_PACKAGE_MARIADB=y
 BR2_PACKAGE_MARIADB_SERVER=y
 BR2_PACKAGE_REDIS=y
+BR2_PACKAGE_NGHTTP2=y
 BR2_PACKAGE_PCRE_16=y
 BR2_PACKAGE_PCRE_32=y
 BR2_PACKAGE_PCRE_UCP=y
