Add a 'cloudbox' cli to complete the installation
- Add a simple webpage on first boot with instructions to complete the installation
- Add a CLI based on sub (https://github.com/basecamp/sub) to complete the setup
- Lock the 'app' SSH account on the 'cloudbox setup' command
- Allow the 'app' SSH user to login with no password on first connection
- Update the 'app' SSH user password on first connection
- Enable the SSH "no password" protection after new 'app' SSH user password is set
- Allow the creation of an SSH admin account during the setup wizard
- Add a 'debug' SSH user, disabled by default

--- a/board/odroidxu4s/rootfs-overlay/etc/apache2/extra/httpd-vhosts.conf
+++ b/board/odroidxu4s/rootfs-overlay/etc/apache2/extra/httpd-vhosts.conf
@@ -15,20 +15,21 @@
 # configuration.
 
 <VirtualHost *:80>
-	RewriteEngine On
+	DocumentRoot "/var/www/setup"
+	RewriteEngine Off
 	RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
 </VirtualHost>
 
 <VirtualHost *:443>
 	Protocols h2 http/1.1
-	DocumentRoot "/var/www/app"
+	DocumentRoot "/var/www/setup"
 
 	# Enable/Disable SSL for this virtual host
-	SSLEngine on
+	SSLEngine Off
 
 	# SSL Certificates
-	SSLCertificateFile "/etc/apache2/server.crt"
-	SSLCertificateKeyFile "/etc/apache2/server.key"
+	#SSLCertificateFile "/etc/apache2/server.crt"
+	#SSLCertificateKeyFile "/etc/apache2/server.key"
 
 	<FilesMatch "\.(cgi|shtml|phtml|php)$">
 		SSLOptions +StdEnvVars
