--- a/configs/odroidxu4_defconfig
+++ b/configs/odroidxu4_defconfig
@@ -58,6 +58,7 @@ BR2_PACKAGE_MARIADB=y
 BR2_PACKAGE_MARIADB_SERVER=y
 BR2_PACKAGE_REDIS=y
 BR2_PACKAGE_NGHTTP2=y
+BR2_PACKAGE_NCURSES_TARGET_PROGS=y
 BR2_PACKAGE_PCRE_16=y
 BR2_PACKAGE_PCRE_32=y
 BR2_PACKAGE_PCRE_UCP=y
@@ -68,12 +69,13 @@ BR2_PACKAGE_AVAHI_DAEMON=y
 BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_OPENSSH=y
+BR2_PACKAGE_BASH=y
 BR2_PACKAGE_SUDO=y
 BR2_PACKAGE_COREUTILS=y
 BR2_PACKAGE_HTOP=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="460M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="500M"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
