--- a/configs/odroidxu4_defconfig
+++ b/configs/odroidxu4_defconfig
@@ -6,6 +6,7 @@ BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="cloudbox"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Cloudbox"
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
 # BR2_TARGET_GENERIC_GETTY is not set
 BR2_SYSTEM_DHCP="eth0"
@@ -22,6 +23,7 @@ BR2_LINUX_KERNEL_DEFCONFIG="odroidxu4"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="exynos5422-odroidxu4"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+BR2_PACKAGE_BTRFS_PROGS=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
@@ -57,6 +59,7 @@ BR2_PACKAGE_MYSQL=y
 BR2_PACKAGE_MARIADB=y
 BR2_PACKAGE_MARIADB_SERVER=y
 BR2_PACKAGE_REDIS=y
+BR2_PACKAGE_LIBUSB=y
 BR2_PACKAGE_NGHTTP2=y
 BR2_PACKAGE_NCURSES_TARGET_PROGS=y
 BR2_PACKAGE_PCRE_16=y
