Breach the cloudbox CLI to many parts and refactor the setup process
- app:domain to manage the public domain name
- app:status to manage the Nextcloud instance
- data:volumes to manage the hard disk volumes
- system:gateway to manage the box gateway and escape NAT
- system:hostname to manage the box name on the LAN
- system:password to manage SSH passwords
- system:setup to setup the box step by step

--- a/board/odroidxu4s/rootfs-overlay/etc/apache2/extra/httpd-vhosts.conf
+++ b/board/odroidxu4s/rootfs-overlay/etc/apache2/extra/httpd-vhosts.conf
@@ -14,32 +14,34 @@
 # You may use the command line option '-S' to verify your virtual host
 # configuration.
 
-<VirtualHost *:80>
-	DocumentRoot "/var/www/setup"
-	RewriteEngine Off
-	RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
-</VirtualHost>
+#<VirtualHost *:80>
+#	DocumentRoot "/var/www/setup"
+#	RewriteEngine Off
+#	RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
+#</VirtualHost>
 
-<VirtualHost *:443>
-	Protocols h2 http/1.1
-	DocumentRoot "/var/www/setup"
+#<VirtualHost *:443>
+#	Protocols h2 http/1.1
+#	DocumentRoot "/var/www/setup"
+#
+#	# Enable/Disable SSL for this virtual host
+#	SSLEngine Off
+#
+#	# SSL Certificates
+#	#SSLCertificateFile "/etc/apache2/server.crt"
+#	#SSLCertificateKeyFile "/etc/apache2/server.key"
+#
+#	<FilesMatch "\.(cgi|shtml|phtml|php)$">
+#		SSLOptions +StdEnvVars
+#	</FilesMatch>
+#	<Directory "/usr/cgi-bin">
+#		SSLOptions +StdEnvVars
+#	</Directory>
+#
+#	# Enable HTTP Strict Transport Security
+#	<IfModule mod_headers.c>
+#		Header always set Strict-Transport-Security "max-age=15552000"
+#	</IfModule>
+#</VirtualHost>
 
-	# Enable/Disable SSL for this virtual host
-	SSLEngine Off
-
-	# SSL Certificates
-	#SSLCertificateFile "/etc/apache2/server.crt"
-	#SSLCertificateKeyFile "/etc/apache2/server.key"
-
-	<FilesMatch "\.(cgi|shtml|phtml|php)$">
-		SSLOptions +StdEnvVars
-	</FilesMatch>
-	<Directory "/usr/cgi-bin">
-		SSLOptions +StdEnvVars
-	</Directory>
-
-	# Enable HTTP Strict Transport Security
-	<IfModule mod_headers.c>
-		Header always set Strict-Transport-Security "max-age=15552000"
-	</IfModule>
-</VirtualHost>
+Include /etc/apache2/vhosts/enabled/*.conf
